--- a/index.html
+++ b/index.html
@@ -1,60 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-    <link rel="stylesheet" href="style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- displays site properly based on user's device -->
 
-    <title>Frontend Mentor | Base Apparel coming soon page</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <link rel="stylesheet" href="style.css" />
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
-  </head>
-  <body>
-    <div class="header"><img src="./images/logo.svg" alt="logo" /></div>
-    <div class="container">
-      <div class="col-left">
-        <h1>
-          We're <br />
-          <span>
-            coming <br />
-            soon</span
-          >
-        </h1>
-        <p>
-          Hello fellow shoppers! We're currently building our new fashion store.
-          Add your email below to stay up-to-date with announcements and our
-          launch deals.
-        </p>
-        <form action="#">
-          <input type="email" placeholder="Email Address" />
-          <img src="./images/icon-error.svg" class="error-icon" alt="" />
-          <button type="submit">
-            <img src="./images/icon-arrow.svg" alt="" />
-          </button>
-          <p class="error-text">Please provide a valid email</p>
-        </form>
-      </div>
-      <div class="col-right"></div>
+  <title>Frontend Mentor | Base Apparel coming soon page</title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
+  </style>
+</head>
+
+<body>
+  <div class="header"><img src="./images/logo.svg" alt="logo" /></div>
+  <div class="container">
+    <div class="col-left">
+      <h1>
+        We're <br />
+        <span>
+          coming <br />
+          soon</span>
+      </h1>
+      <p>
+        Hello fellow shoppers! We're currently building our new fashion store.
+        Add your email below to stay up-to-date with announcements and our
+        launch deals.
+      </p>
+      <form action="#">
+        <input type="email" placeholder="Email Address" />
+        <img src="./images/icon-error.svg" class="error-icon" alt="" />
+        <button type="submit">
+          <img src="./images/icon-arrow.svg" alt="" />
+        </button>
+        <p class="error-text">Please provide a valid email</p>
+      </form>
     </div>
+    <div class="col-right"></div>
+  </div>
 
-    <!-- <footer>
+  <!-- <footer>
       <p class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
@@ -62,7 +59,8 @@
         >. Coded by <a href="#">Your Name Here</a>.
       </p>
     </footer> -->
-   
-  </body>
-  <script src="app.js"></script>
+
+</body>
+<script src="app.js"></script>
+
 </html>
